--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto";
+}
+
+svg {
+  @apply w-5 h-auto;
+}
+
+.svg-parent {
+  @apply text-white font-light text-xs flex flex-col items-center justify-center   hover:cursor-pointer  ml-2 hover:underline px-4 py-2;
+}
